Interpreting escape sequence only for string typing

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -138,11 +138,11 @@ ScrollLock >> Boss
   BracketLeft              >> '['
   Shift{BracketRight}      >> '}'
   BracketRight             >> ']'
-  Shift{Backquote}         >> Equal Space  # '` '
+  Shift{Backquote}         >> '`'
   Backquote                >> '~'
   Shift{2}                 >> '@'
   Shift{3}                 >> '#'
-  Shift{6}                 >> !Shift Backquote Space   # '^ '
+  Shift{6}                 >> '^'
   Shift{7}                 >> '&'
   Shift{8}                 >> '*'
   Shift{9}                 >> '('
