--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,8 @@ set(SOURCES_CONTROL
 set(SOURCES_COMMON
   src/common/Connection.cpp
   src/common/Connection.h
+  src/common/Host.cpp
+  src/common/Host.h
   src/common/Duration.h
   src/common/output.cpp
   src/common/output.h
