--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -306,7 +306,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Windows")
 elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
   set(CPACK_DEBIAN_PACKAGE_DEPENDS "libudev1, libusb-1.0-0")
   set(CPACK_DEBIAN_PACKAGE_SECTION utils)
-  set(CPACK_RPM_PACKAGE_REQUIRES "libudev, libusb")
+  set(CPACK_RPM_PACKAGE_REQUIRES "libusb1, libxkbcommon")
   set(CPACK_RPM_PACKAGE_LICENSE "GPL")
   set(CPACK_RPM_PACKAGE_GROUP utils)
 endif()
