--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,6 +282,8 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   install(DIRECTORY extra/share DESTINATION . COMPONENT Application)
   install(DIRECTORY extra/lib DESTINATION . COMPONENT Application)
   install(DIRECTORY extra/xdg DESTINATION "../etc" COMPONENT Application)
+  install(FILES extra/icon.svg DESTINATION "share/icons/hicolor/scalable/apps" 
+          RENAME "io.github.houmain.keymapper.svg" COMPONENT Application)
 elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
   install(TARGETS ${TARGETS} DESTINATION "bin" COMPONENT Application)
   install(FILES extra/keymapper-launchd DESTINATION "bin" COMPONENT Application)
@@ -326,9 +328,9 @@ if(CMAKE_SYSTEM_NAME MATCHES "Windows")
 elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
   set(CPACK_DEBIAN_PACKAGE_DEPENDS "libudev1, libusb-1.0-0, libappindicator3-1")
   set(CPACK_DEBIAN_PACKAGE_SECTION utils)
-  set(CPACK_RPM_PACKAGE_REQUIRES "libusb1, libxkbcommon, libappindicator3-1")
-  set(CPACK_RPM_PACKAGE_LICENSE "GPL")
-  set(CPACK_RPM_PACKAGE_GROUP utils)
+  set(CPACK_RPM_PACKAGE_REQUIRES "libusb1, libxkbcommon, libappindicator-gtk3")
+  set(CPACK_RPM_PACKAGE_LICENSE "GPLv3")
+  set(CPACK_RPM_PACKAGE_GROUP "System Environment/Daemons")
 endif()
 
 include(CPack)
