Fixed device filter on MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,8 @@ elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
     src/client/unix/StringTyperImpl.h
     src/client/unix/StringTyperGeneric.cpp
     src/client/unix/StringTyperCarbon.cpp
+    src/client/unix/TrayIcon.cpp
+    src/client/unix/TrayIcon.h
     src/client/unix/main.cpp
   )
   set(SOURCES_SERVER ${SOURCES_SERVER}
