Using libayatana-appindicator instead of libappindicator when available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,6 +180,9 @@ add_executable(keymapperctl ${SOURCES_CONTROL} ${SOURCES_COMMON})
 if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   find_package(PkgConfig REQUIRED)
 
+  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libudev1, libusb-1.0-0")
+  set(CPACK_RPM_PACKAGE_REQUIRES "libusb1")
+
   option(ENABLE_X11 "Enable X11 context awareness" TRUE)
   if(ENABLE_X11)
     target_compile_definitions(keymapper PRIVATE ENABLE_X11)
@@ -208,15 +211,38 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
     wayland_proto_library(wayland-proto wlr-foreign-toplevel-management-unstable-v1)
     target_compile_definitions(keymapper PRIVATE ENABLE_WAYLAND)
     target_link_libraries(keymapper wayland-proto ${XKBCOMMON_LIBRARIES})
+
+    set(CPACK_RPM_PACKAGE_REQUIRES "${CPACK_RPM_PACKAGE_REQUIRES}, libxkbcommon")
   endif()
 
-  option(ENABLE_APPINDICATOR "Enable tray icon" TRUE)
+  pkg_check_modules(AYATANA_APPINDICATOR ayatana-appindicator3-0.1)
+  if(AYATANA_APPINDICATOR_FOUND)
+    # link libayatana-appindicator instead of libappindicator when available
+    set(APPINDICATOR_FOUND ${AYATANA_APPINDICATOR_FOUND})
+    set(APPINDICATOR_LIBRARIES ${AYATANA_APPINDICATOR_LIBRARIES})
+    set(APPINDICATOR_INCLUDE_DIRS ${AYATANA_APPINDICATOR_INCLUDE_DIRS})
+  else()
+    pkg_check_modules(APPINDICATOR appindicator3-0.1)
+  endif()
+
+  pkg_check_modules(GTK3 gtk+-3.0)
+  if(APPINDICATOR_FOUND AND GTK3_FOUND)
+    set(ENABLE_APPINDICATOR_DEFAULT TRUE)
+  endif()
+
+  option(ENABLE_APPINDICATOR "Enable tray icon" ${ENABLE_APPINDICATOR_DEFAULT})
   if(ENABLE_APPINDICATOR)
-    pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
-    pkg_check_modules(APPINDICATOR REQUIRED appindicator3-0.1)
     target_compile_definitions(keymapper PRIVATE ENABLE_APPINDICATOR)
     target_link_libraries(keymapper ${GTK3_LIBRARIES} ${APPINDICATOR_LIBRARIES})
     target_include_directories(keymapper PRIVATE ${GTK3_INCLUDE_DIRS} ${APPINDICATOR_INCLUDE_DIRS})
+
+    if(AYATANA_APPINDICATOR_FOUND)
+      set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS}, libayatana-appindicator3-1")
+      set(CPACK_RPM_PACKAGE_REQUIRES "${CPACK_RPM_PACKAGE_REQUIRES}, libayatana-appindicator-gtk3")
+    else()
+      set(CPACK_DEBIAN_PACKAGE_DEPENDS "${CPACK_DEBIAN_PACKAGE_DEPENDS}, appindicator3-1")
+      set(CPACK_RPM_PACKAGE_REQUIRES "${CPACK_RPM_PACKAGE_REQUIRES}, appindicator-gtk3")
+    endif()
   endif()
 
   if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
@@ -312,7 +338,7 @@ set(CPACK_PACKAGE_CONTACT ${CPACK_PACKAGE_HOMEPAGE_URL})
 set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
 set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/src/common/icon.ico")
- 
+
 set(CPACK_STRIP_FILES TRUE)
 if(VERSION MATCHES "^[0-9]+\.[0-9]+\.[0-9]+")
   string(REGEX MATCHALL "[0-9]+" VERSION_LIST "${VERSION}")
@@ -320,6 +346,9 @@ if(VERSION MATCHES "^[0-9]+\.[0-9]+\.[0-9]+")
   list(GET VERSION_LIST 1 CPACK_PACKAGE_VERSION_MINOR)
   list(GET VERSION_LIST 2 CPACK_PACKAGE_VERSION_PATCH)
 endif()
+
+message(${CPACK_DEBIAN_PACKAGE_DEPENDS})
+message(${CPACK_RPM_PACKAGE_REQUIRES})
 
 if(CMAKE_SYSTEM_NAME MATCHES "Windows")
   set(CPACK_GENERATOR WIX)
@@ -336,9 +365,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Windows")
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf" "{\\rtf1\\ansi\\deff0\\nouicompat{\\fonttbl{\\f0\\fnil\\fcharset0 Sans Serif;}}\\fs18 ${LICENSE_RTF} }")
   set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf")
 elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
-  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libudev1, libusb-1.0-0, libappindicator3-1")
   set(CPACK_DEBIAN_PACKAGE_SECTION utils)
-  set(CPACK_RPM_PACKAGE_REQUIRES "libusb1, libxkbcommon, libappindicator-gtk3")
   set(CPACK_RPM_PACKAGE_LICENSE "GPLv3")
   set(CPACK_RPM_PACKAGE_GROUP "System Environment/Daemons")
 endif()
