Added @macos-iso-keyboard directive
to optionally restore "Swapping mixed up IntlBackslash and Backquote
keys on MacOS"

--- a/keymapper.conf
+++ b/keymapper.conf
@@ -184,6 +184,7 @@ ScrollLock >> Boss
 
 # system/application specific mappings for abstract commands
 [system="MacOS"]
+  @macos-iso-keyboard
   close_window         >> Command{Q}
   cursor_home          >> Command{ArrowLeft}
   cursor_end           >> Command{ArrowRight}
