--- a/src/common/windows/resource.rc.in
+++ b/src/common/windows/resource.rc.in
@@ -2,7 +2,7 @@
 #define VER_PRODUCTNAME_STR         "keymapper"
 #define VER_FILEDESCRIPTION_STR     "Keymapper"
 #define VER_COMPANYNAME_STR         "https://github.com/houmain/keymapper"
-#define VER_LEGALCOPYRIGHT_STR      "(c) 2019-2022 by Albert Kalchmair"
+#define VER_LEGALCOPYRIGHT_STR      "(c) 2019-2024 by Albert Kalchmair"
 
 #define VER_FILEVERSION             ${FILE_VERSION},0
 #define VER_FILEVERSION_STR         "${VERSION}\0"
@@ -19,7 +19,7 @@ BEGIN
     BLOCK "040904E4"
     BEGIN
       VALUE "CompanyName",      VER_COMPANYNAME_STR
-      VALUE "FileDescription",  VER_FILEDESCRIPTION_STR
+      //VALUE "FileDescription",  VER_FILEDESCRIPTION_STR
       VALUE "FileVersion",      VER_FILEVERSION_STR
       VALUE "LegalCopyright",   VER_LEGALCOPYRIGHT_STR
       VALUE "ProductName",      VER_PRODUCTNAME_STR
