Made virtual device name and install directory lowercase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,7 +342,7 @@ set(CPACK_PACKAGE_NAME "keymapper")
 set(CPACK_PACKAGE_DESCRIPTION "A cross-platform context-aware key remapper")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "keymapper")
 set(CPACK_PACKAGE_VENDOR "Albert Kalchmair")
-set(CPACK_PACKAGE_INSTALL_DIRECTORY "Keymapper")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "keymapper")
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/houmain/keymapper")
 set(CPACK_PACKAGE_CONTACT ${CPACK_PACKAGE_HOMEPAGE_URL})
 set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
